Support for Siemens IPC127 MMIO GPIO-driven LEDS
This simply introduces a tiny LED driver based on the MMIO GPIO
registers described in user's manual. It would be nice to find
a generic MMIO GPIO driver since it seems like there's a few that
do this type of thing already (including the one for APU LEDs that
was used as a prototype).

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -312,6 +312,14 @@ config LEDS_SUN50I_A100
 	  in some Allwinner sunxi SoCs, including A100, R329, and D1.
 	  It uses a one-wire interface to control up to 1024 LEDs.
 
+config LEDS_SIEMENS_IPC127
+	tristate "LED support for Siemens IPC127"
+	depends on LEDS_CLASS
+	depends on X86 && DMI
+	select LEDS_TRIGGERS
+	help
+	  This option enables support for Siemens IPC127 MMIO GPIO-driven LEDS.
+
 config LEDS_SUNFIRE
 	tristate "LED support for SunFire servers."
 	depends on LEDS_CLASS
