Add support for LEDs on Operational Services EM320 device
Signed-off-by: Mikhail Malyshev <mikem@zededa.com>

--- a/drivers/platform/x86/Kconfig
+++ b/drivers/platform/x86/Kconfig
@@ -1127,6 +1127,16 @@ config SEL3350_PLATFORM
 	  To compile this driver as a module, choose M here: the module
 	  will be called sel3350-platform.
 
+config OS_EM32X
+	tristate "Operational Services  EM32x platform"
+	depends on X86_64
+	depends on I2C
+	depends on LEDS_CLASS
+	depends on LEDS_GPIO
+	depends on GPIO_PCA953X
+	help
+	  This driver add support for Operational Services EM32x platforms
+
 endif # X86_PLATFORM_DEVICES
 
 config P2SB
