--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -451,6 +451,9 @@ CONFIG_HOTPLUG_PCI_SHPC=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_FW_LOADER_USER_HELPER=y
+CONFIG_MHI_BUS=m
+CONFIG_MHI_BUS_PCI_GENERIC=m
+CONFIG_MHI_BUS_EP=m
 CONFIG_CONNECTOR=y
 CONFIG_DMI_SYSFS=y
 CONFIG_GOOGLE_FIRMWARE=y
@@ -534,6 +537,7 @@ CONFIG_TUN=y
 CONFIG_VETH=y
 CONFIG_VIRTIO_NET=y
 CONFIG_NLMON=y
+CONFIG_MHI_NET=m
 # CONFIG_NET_VENDOR_3COM is not set
 # CONFIG_NET_VENDOR_ADAPTEC is not set
 # CONFIG_NET_VENDOR_AGERE is not set
@@ -664,6 +668,9 @@ CONFIG_RTL8XXXU=m
 CONFIG_RTL8XXXU_UNTESTED=y
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
+CONFIG_WWAN=m
+CONFIG_MHI_WWAN_CTRL=m
+CONFIG_MHI_WWAN_MBIM=m
 CONFIG_XEN_NETDEV_BACKEND=y
 CONFIG_VMXNET3=y
 CONFIG_HYPERV_NET=y
