--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -564,6 +564,7 @@ CONFIG_IXGBE=m
 CONFIG_IXGBEVF=m
 CONFIG_I40E=m
 CONFIG_I40EVF=m
+CONFIG_ICE=m
 CONFIG_IGC=m
 # CONFIG_NET_VENDOR_MARVELL is not set
 CONFIG_MLX4_EN=m
