kernel: enable debug info
this is needed for bpftrace to get relevant information

Signed-off-by: Christoph Ostarek <christoph@zededa.com>

--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -972,6 +972,8 @@ CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=m
 CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_CALLER=y
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_FRAME_WARN=1024
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_UBSAN=y
