Added Broadcom wireless driver
- This change in kconfig concerns the driver support for WIFI on the Kontron
devices that is currently not present. The goal is to enable the
Broadcom BCM4356 802.11ac Wireless Network Adapter.
- We tested it on the Kontron 403 edge device.

Signed-off-by: Ioannis Sfakianakis <jsfakas@gmail.com>

--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -647,6 +647,9 @@ CONFIG_ATH10K_PCI=m
 CONFIG_ATH10K_DEBUG=y
 CONFIG_ATH10K_DEBUGFS=y
 CONFIG_ATH10K_TRACING=y
+CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_USB=y
+CONFIG_BRCMFMAC_PCIE=y
 CONFIG_IWLWIFI=m
 CONFIG_IWLDVM=m
 CONFIG_IWLMVM=m
