--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -722,6 +722,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_DESIGNWARE_BAYTRAIL=y
 CONFIG_I2C_DESIGNWARE_PCI=m
 CONFIG_I2C_GPIO=m
+CONFIG_I2C_KEMPLD=m
 CONFIG_SPI=y
 CONFIG_SPI_PXA2XX=m
 CONFIG_PINCTRL_AMD=y
@@ -731,10 +732,10 @@ CONFIG_PINCTRL_CHERRYVIEW=y
 CONFIG_PINCTRL_BROXTON=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_KEMPLD=m
 CONFIG_SENSORS_NCT6775=m
 # CONFIG_THERMAL_HWMON is not set
 CONFIG_WATCHDOG=y
-CONFIG_WATCHDOG_CORE=y
 CONFIG_WATCHDOG_OPEN_TIMEOUT=600
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_SOFT_WATCHDOG=m
@@ -742,6 +743,7 @@ CONFIG_WDAT_WDT=m
 CONFIG_ITCO_WDT=m
 CONFIG_ITCO_VENDOR_SUPPORT=y
 CONFIG_HP_WATCHDOG=m
+CONFIG_KEMPLD_WDT=y
 CONFIG_W83627HF_WDT=m
 CONFIG_XEN_WDT=m
 CONFIG_LPC_ICH=y
@@ -750,6 +752,7 @@ CONFIG_INTEL_SOC_PMIC_BXTWC=m
 CONFIG_MFD_INTEL_LPSS_ACPI=m
 CONFIG_MFD_INTEL_LPSS_PCI=m
 CONFIG_MFD_INTEL_PMC_BXT=m
+CONFIG_MFD_KEMPLD=y
 CONFIG_MFD_SM501=y
 CONFIG_MFD_WL1273_CORE=y
 CONFIG_MFD_VX855=y
