--- a/arch/x86/configs/eve_defconfig
+++ b/arch/x86/configs/eve_defconfig
@@ -736,6 +736,7 @@ CONFIG_PINCTRL_CHERRYVIEW=y
 CONFIG_PINCTRL_BROXTON=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_KEMPLD=m
 CONFIG_SENSORS_NCT6775=m
 # CONFIG_THERMAL_HWMON is not set
 CONFIG_WATCHDOG=y
