--- a/Dockerfile.gcc
+++ b/Dockerfile.gcc
@@ -108,7 +108,7 @@ RUN --mount=type=cache,target=/root/.cache/ccache,id=kernel-ccache-${TARGETARCH}
         INSTALL_MOD_PATH=/tmp/kernel-modules \
     && ccache -s
 
-ADD https://github.com/openzfs/zfs.git#zfs-2.2.2 /tmp/zfs
+ADD https://github.com/openzfs/zfs.git#zfs-2.2.6 /tmp/zfs
 WORKDIR /tmp/zfs
 
 RUN --mount=type=cache,target=/root/.cache/ccache,id=zfs-ccache-${TARGETARCH} \
@@ -159,7 +159,7 @@ RUN DVER=$(basename "$(find /tmp/kernel-modules/lib/modules/ -mindepth 1 -maxdep
 # Package all the modules up
 RUN ( DVER=$(basename $(find /tmp/kernel-modules/lib/modules/ -mindepth 1 -maxdepth 1)) && \
       cd /tmp/kernel-modules/lib/modules/$DVER && \
-      rm build source && \
+      rm build && \
       ln -s /usr/src/linux-headers-$DVER build ) && \
     ( cd /tmp/kernel-modules && tar cf /out/kernel.tar . )
 
